<resources>
    <string name="app_name">Momento</string>
    <string name="moment_title_hint">Input title</string>
    <string name="moment_title_label">Title</string>
    <string name="moment_details_label">Details</string>
    <string name="moment_is_favorite_label">Favorite</string>
    <string name="date_picker_title">Date of moment:</string>
    <string name="moment_update_date">Update date</string>
    <string name="moment_update_time">Update time</string>
    <string name="new_moment">New moment</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="subtitle_format">%1$s moments</string>
    <string name="moment_actions_title">Choose action:</string>
    <string name="save_moment_button_text">Save</string>
    <string name="moment_choose_people_title">Choose people</string>
    <string name="moment_send_report_title">Send report</string>

    <string name="moment_report">%1$s!
        The moment was on %2$s. %3$s, and %4$s
    </string>
    <string name="moment_report_favorite">The case is favorite</string>
    <string name="moment_report_not_favorite">The case is not favorite</string>
    <string name="moment_report_no_people">there is no people.</string>
    <string name="moment_report_people">the people: %s.</string>
    <string name="moment_report_subject">Moment Report</string>
    <string name="send_report">Send moment report via</string>

    <string-array name="moment_action_list">
        <item>Delete</item>
        <item>Update</item>
    </string-array>
</resources>
